--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==8.0.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
 Flask==1.1.2
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
@@ -11,6 +12,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 PyMuPDF==1.17.7
 pytz==2020.1
+qrcode==6.1
 requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.19
