--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,20 +1,25 @@
 aniso8601==8.0.0
+asgiref==3.2.10
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+Django==3.1.1
 Flask==1.1.2
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 idna==2.10
+image==1.5.32
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+Pillow==7.2.0
 PyMuPDF==1.17.7
 pytz==2020.1
 qrcode==6.1
 requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.19
+sqlparse==0.3.1
 urllib3==1.25.10
 Werkzeug==1.0.1
