--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,6 +6,7 @@ click==7.1.2
 colorama==0.4.3
 Django==3.1.1
 Flask==1.1.2
+Flask-Cors==3.0.9
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 idna==2.10
